<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/lLcurverd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardHeadline"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_margin="10dp"

                app:cardCornerRadius="10.0dip"
                app:cardElevation="5.0dip"
                app:strokeColor="@android:color/holo_orange_light"
                app:strokeWidth="2.0dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/headline_image"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_launcher_background"
                        android:tint="@android:color/holo_orange_light" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/berita_utama"
                        android:textColor="@android:color/holo_orange_light"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="bottom|center"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:background="@android:color/holo_orange_light"
                            android:padding="10dp" />
                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:layout_marginStart="3dp"
                            android:background="@android:color/holo_orange_light"
                            android:padding="10dp" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardSportsz"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_margin="10dp"

                app:cardCornerRadius="10.0dip"
                app:cardElevation="5.0dip"
                app:strokeColor="@android:color/holo_orange_light"
                app:strokeWidth="2.0dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/sports_image"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_launcher_background"
                        android:tint="@android:color/holo_orange_light" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/olahraga"
                        android:textColor="@android:color/holo_orange_light"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="bottom|center"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:background="@android:color/holo_orange_light"
                            android:padding="10dp" />
                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:layout_marginStart="3dp"
                            android:background="@android:color/holo_orange_light"
                            android:padding="10dp" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardTechno"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_margin="10dp"

                app:cardCornerRadius="10.0dip"
                app:cardElevation="5.0dip"
                app:strokeColor="@android:color/holo_orange_light"
                app:strokeWidth="2.0dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/techno_image"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_launcher_background"
                        android:tint="@android:color/holo_orange_light" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/techno"
                        android:textColor="@android:color/holo_orange_light"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="bottom|center"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:background="@android:color/holo_orange_light"
                            android:padding="10dp" />
                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:layout_marginStart="3dp"
                            android:background="@android:color/holo_orange_light"
                            android:padding="10dp" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardBusiness"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_margin="10dp"

                app:cardCornerRadius="10.0dip"
                app:cardElevation="5.0dip"
                app:strokeColor="@android:color/holo_orange_light"
                app:strokeWidth="2.0dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_launcher_background"
                        android:tint="@android:color/holo_orange_light" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text=" Bisnis "
                        android:textColor="@android:color/holo_orange_light"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="bottom|center"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:background="@android:color/holo_orange_light"
                            android:padding="10dp" />
                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:layout_marginStart="3dp"
                            android:background="@android:color/holo_orange_light"
                            android:padding="10dp" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardHealth"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_margin="10dp"

                app:cardCornerRadius="10.0dip"
                app:cardElevation="5.0dip"
                app:strokeColor="@android:color/holo_orange_light"
                app:strokeWidth="2.0dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/health_image"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_launcher_background"
                        android:tint="@android:color/holo_orange_light" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/health"
                        android:textColor="@android:color/holo_orange_light"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="bottom|center"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:background="@android:color/holo_orange_light"
                            android:padding="10dp" />
                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:layout_marginStart="3dp"
                            android:background="@android:color/holo_orange_light"
                            android:padding="10dp" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cardEnter"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_margin="10dp"

                app:cardCornerRadius="10.0dip"
                app:cardElevation="5.0dip"
                app:strokeColor="@android:color/holo_orange_light"
                app:strokeWidth="2.0dip">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/image_entertainment"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_launcher_background"
                        android:tint="@android:color/holo_orange_light" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/entertainment"
                        android:textColor="@android:color/holo_orange_light"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="bottom|center"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:background="@android:color/holo_orange_light"
                            android:padding="10dp" />
                        <View
                            android:layout_width="100dp"
                            android:layout_height="3dp"
                            android:layout_marginStart="3dp"
                            android:background="@android:color/holo_orange_light"
                            android:padding="10dp" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>